--- a/Immersive World/Base.lproj/Main.storyboard
+++ b/Immersive World/Base.lproj/Main.storyboard
@@ -19,26 +19,34 @@
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BrB-h1-WRS">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="818"/>
                             </arscnView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="RAF-WA-s5d">
-                                <rect key="frame" x="0.0" y="65" width="393" height="73"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="crosshair" translatesAutoresizingMaskIntoConstraints="NO" id="Q6N-4r-0PH">
+                                <rect key="frame" x="140" y="415" width="113" height="87"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="73" id="ftX-B4-Z0C"/>
-                                </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="box_outline" translatesAutoresizingMaskIntoConstraints="NO" id="Q6N-4r-0PH">
-                                <rect key="frame" x="-52" y="350" width="497" height="395"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="395" id="9ka-OA-lfH"/>
-                                    <constraint firstAttribute="width" constant="497" id="JhE-nP-kOp"/>
+                                    <constraint firstAttribute="height" constant="40" id="9ka-OA-lfH"/>
+                                    <constraint firstAttribute="width" constant="40" id="JhE-nP-kOp"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iNX-OO-7qR">
-                                <rect key="frame" x="162" y="710" width="68" height="35"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cm8-Ch-Sjq">
+                                <rect key="frame" x="16" y="75" width="361" height="40"/>
+                                <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="A74-MK-JnB"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="Draw an object and scan it within the crosshair">
+                                        <attributes>
+                                            <font key="NSFont" metaFont="system" size="21"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" minimumLineHeight="20" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iNX-OO-7qR">
+                                <rect key="frame" x="16" y="751" width="361" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="361" id="6j9-u9-zEt"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Reset"/>
                                 <connections>
@@ -49,21 +57,22 @@
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="fQZ-KI-GVf" firstAttribute="trailing" secondItem="Cm8-Ch-Sjq" secondAttribute="trailing" constant="16" id="1MI-Zb-kbC"/>
+                            <constraint firstItem="Cm8-Ch-Sjq" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" constant="16" id="2sN-hS-Dc4"/>
+                            <constraint firstItem="Cm8-Ch-Sjq" firstAttribute="centerX" secondItem="fQZ-KI-GVf" secondAttribute="centerX" id="61W-48-THd"/>
                             <constraint firstItem="Q6N-4r-0PH" firstAttribute="centerX" secondItem="fQZ-KI-GVf" secondAttribute="centerX" id="FqS-zY-Tmq"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="GsS-dJ-CKf"/>
-                            <constraint firstItem="iNX-OO-7qR" firstAttribute="top" secondItem="Q6N-4r-0PH" secondAttribute="bottom" constant="-35" id="Ufb-Rs-xkn"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XyZ-9z-H8e"/>
                             <constraint firstItem="iNX-OO-7qR" firstAttribute="centerX" secondItem="fQZ-KI-GVf" secondAttribute="centerX" id="Zt6-Es-WfQ"/>
                             <constraint firstItem="Q6N-4r-0PH" firstAttribute="centerY" secondItem="fQZ-KI-GVf" secondAttribute="centerY" id="bVZ-LD-GgP"/>
-                            <constraint firstItem="fQZ-KI-GVf" firstAttribute="trailing" secondItem="RAF-WA-s5d" secondAttribute="trailing" id="fde-gF-aDd"/>
-                            <constraint firstItem="RAF-WA-s5d" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" constant="6" id="hPa-QP-LyX"/>
-                            <constraint firstItem="RAF-WA-s5d" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="jua-DV-kmO"/>
+                            <constraint firstItem="fQZ-KI-GVf" firstAttribute="bottom" secondItem="iNX-OO-7qR" secondAttribute="bottom" constant="32" id="fjW-Ma-cYY"/>
+                            <constraint firstItem="Cm8-Ch-Sjq" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" constant="16" id="oU8-QD-dNm"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="debugText" destination="RAF-WA-s5d" id="YPC-LK-8GC"/>
+                        <outlet property="labelText" destination="Cm8-Ch-Sjq" id="XNZ-J2-0S3"/>
                         <outlet property="resButton" destination="iNX-OO-7qR" id="wCq-Im-hC3"/>
                         <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
                     </connections>
@@ -74,12 +83,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="box_outline" width="170.66667175292969" height="170.66667175292969"/>
-        <systemColor name="labelColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="crosshair" width="170.66667175292969" height="170.66667175292969"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGroupedBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
