--- a/Immersive World/Base.lproj/Main.storyboard
+++ b/Immersive World/Base.lproj/Main.storyboard
@@ -19,11 +19,11 @@
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BrB-h1-WRS">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="818"/>
                             </arscnView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="crosshair" translatesAutoresizingMaskIntoConstraints="NO" id="Q6N-4r-0PH">
-                                <rect key="frame" x="140" y="415" width="113" height="87"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="crosshair" translatesAutoresizingMaskIntoConstraints="NO" id="Q6N-4r-0PH">
+                                <rect key="frame" x="176.66666666666666" y="418.66666666666669" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="9ka-OA-lfH"/>
-                                    <constraint firstAttribute="width" constant="40" id="JhE-nP-kOp"/>
+                                    <constraint firstAttribute="width" constant="40" id="1Wf-Bc-fZp"/>
+                                    <constraint firstAttribute="height" constant="40" id="tPJ-6R-NPW"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cm8-Ch-Sjq">
@@ -61,15 +61,15 @@
                             <constraint firstItem="fQZ-KI-GVf" firstAttribute="trailing" secondItem="Cm8-Ch-Sjq" secondAttribute="trailing" constant="16" id="1MI-Zb-kbC"/>
                             <constraint firstItem="Cm8-Ch-Sjq" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" constant="16" id="2sN-hS-Dc4"/>
                             <constraint firstItem="Cm8-Ch-Sjq" firstAttribute="centerX" secondItem="fQZ-KI-GVf" secondAttribute="centerX" id="61W-48-THd"/>
-                            <constraint firstItem="Q6N-4r-0PH" firstAttribute="centerX" secondItem="fQZ-KI-GVf" secondAttribute="centerX" id="FqS-zY-Tmq"/>
+                            <constraint firstItem="Q6N-4r-0PH" firstAttribute="centerY" secondItem="fQZ-KI-GVf" secondAttribute="centerY" id="75X-aW-d5I"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="GsS-dJ-CKf"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XyZ-9z-H8e"/>
                             <constraint firstItem="iNX-OO-7qR" firstAttribute="centerX" secondItem="fQZ-KI-GVf" secondAttribute="centerX" id="Zt6-Es-WfQ"/>
-                            <constraint firstItem="Q6N-4r-0PH" firstAttribute="centerY" secondItem="fQZ-KI-GVf" secondAttribute="centerY" id="bVZ-LD-GgP"/>
                             <constraint firstItem="fQZ-KI-GVf" firstAttribute="bottom" secondItem="iNX-OO-7qR" secondAttribute="bottom" constant="32" id="fjW-Ma-cYY"/>
                             <constraint firstItem="Cm8-Ch-Sjq" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" constant="16" id="oU8-QD-dNm"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
+                            <constraint firstItem="Q6N-4r-0PH" firstAttribute="centerX" secondItem="fQZ-KI-GVf" secondAttribute="centerX" id="zwO-Lc-mbt"/>
                         </constraints>
                     </view>
                     <connections>
